deployment/k8s/mysql-config-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql
        name: mysql
        ports: 
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata: 
  name: mysql-ext-service
spec:
  selector:
    app: mysql
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 30006
