deployment/k8s/sgr-service-depl.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sgr-deployment
  name: sgr-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sgr-deployment
  template:
    metadata:
      labels:
        app: sgr-deployment
    spec:
      containers:
      - image: sgr-api
        name: sgr-service
        imagePullPolicy: Never
        ports: 
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: sgr-api-service
spec:
  selector:
    app: sgr-deployment
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
