deployment/k8s/sgr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sgr-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.sgr-api.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sgr-api-service
            port:
              number: 80
